After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759374 - Compilation warnings in default plugin for deprecated APIs
Compilation warnings in default plugin for deprecated APIs
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2015-12-11 22:54 UTC by Lionel Landwerlin
Modified: 2015-12-15 08:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
default-plugin: port to non deprecated API (10.24 KB, patch)
2015-12-11 22:54 UTC, Lionel Landwerlin
committed Details | Review

Description Lionel Landwerlin 2015-12-11 22:54:52 UTC
Here is a port to non deprecated stuff.
Comment 1 Lionel Landwerlin 2015-12-11 22:54:57 UTC
Created attachment 317235 [details] [review]
default-plugin: port to non deprecated API
Comment 2 Rui Matos 2015-12-14 18:57:25 UTC
Review of attachment 317235 [details] [review]:

Looks good, thanks
Comment 3 Lionel Landwerlin 2015-12-15 08:41:43 UTC
Review of attachment 317235 [details] [review]:

Pushed to master.