default-plugin: port to non deprecated API

https://bugzilla.gnome.org/show_bug.cgi?id=759374